<resources>
    <string name="app_name">Chudobilet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="cinema">Кино</string>
    <string name="concerts">Концерты</string>
    <string name="theaters">Театры</string>
    <string name="for_children">Детям</string>
    <string name="other">Другое</string>
    <string name="masterclass">Мастер-класс</string>

    <string name="my_orders">Мои заказы</string>
    <string name="my_subscriptions">Мои подписки</string>
    <string name="options">Настройки</string>

    <string name="news">Новости</string>
    <string name="other_apps">Другие приложения</string>
    <string name="about">О приложении</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="list">
        <!--<item>Изменить фото</item>-->
        <item>Настроить подписки</item>
    </string-array>


</resources>
